--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -67,26 +67,26 @@
    */
 
   body {
-    --ion-color-primary: #f00000;
-    --ion-color-primary-rgb: 240, 0, 0;
+    --ion-color-primary: #7C0A02;
+    --ion-color-primary-rgb: 124, 10, 2;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255, 255, 255;
-    --ion-color-primary-shade: #d30000;
-    --ion-color-primary-tint: #f21a1a;
+    --ion-color-primary-shade: #6d0902;
+    --ion-color-primary-tint: #89231b;
 
-    --ion-color-secondary: #b00000;
-    --ion-color-secondary-rgb: 176, 0, 0;
+    --ion-color-secondary: #C21807;
+    --ion-color-secondary-rgb: 194, 24, 7;
     --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 255, 255, 255;
-    --ion-color-secondary-shade: #9b0000;
-    --ion-color-secondary-tint: #b81a1a;
+    --ion-color-secondary-shade: #ab1506;
+    --ion-color-secondary-tint: #c82f20;
 
-    --ion-color-tertiary: #900000;
-    --ion-color-tertiary-rgb: 144, 0, 0;
+    --ion-color-tertiary: #FF2400;
+    --ion-color-tertiary-rgb: 255, 36, 0;
     --ion-color-tertiary-contrast: #ffffff;
     --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-    --ion-color-tertiary-shade: #7f0000;
-    --ion-color-tertiary-tint: #9b1a1a;
+    --ion-color-tertiary-shade: #e02000;
+    --ion-color-tertiary-tint: #ff3a1a;
 
     --ion-color-success: #2fdf75;
     --ion-color-success-rgb: 47, 223, 117;
